--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+
+    "ngsw-config": "./node_modules/.bin/ngsw-config ./dist/front/v1 ./ngsw-config.json /front/v1",
+    "build-pwa": "ng build --prod --output-path=./dist/front/v1/ --base-href=/front/v1/"
   },
   "private": true,
   "dependencies": {
